--- a/style.css
+++ b/style.css
@@ -332,10 +332,12 @@ body {
     filter: blur(20px);
 }
 
-.video-wrapper video {
+.video-wrapper video,
+.video-wrapper iframe {
     width: 100%;
     display: block;
     border-radius: 24px;
+    aspect-ratio: 16/9;
 }
 
 .video-overlay {
